jar gives error"